--- a/app/globals.css
+++ b/app/globals.css
@@ -7,7 +7,7 @@
 		@apply border-border;
 	}
 	body {
-		@apply bg-card text-foreground;
+		@apply bg-gradient-to-r from-slate-500/20 to-slate-800/20 /* bg-card text-foreground */;
 	}
 
 	:root {
@@ -34,9 +34,9 @@
 	}
 
 	.dark {
-		--background: 220, 7%, 18% /* 20 14.3% 4.1% */;
+		--background: 24 9.8% 10%; /* 20 14.3% 4.1% */
 		--foreground: 0 0% 95%;
-		--card: 24 9.8% 10%;
+		--card: 220 7% 18%; /* 24 9.8% 10%; */
 		--card-foreground: 0 0% 95%;
 		--popover: 0 0% 9%;
 		--popover-foreground: 0 0% 95%;
@@ -52,6 +52,6 @@
 		--destructive-foreground: 0 85.7% 97.3%;
 		--border: 240 3.7% 15.9%;
 		--input: 240 3.7% 15.9%;
-		--ring: 345 82% 61% /* 346.8 77.2% 49.8% */;
+		--ring: 345 82% 61%; /* 346.8 77.2% 49.8% */
 	}
 }
